var searchData=
[
  ['handinhomeworkfieldnumber_0',['HandInHomeworkFieldNumber',['../classg_r_p_c_client_1_1_response_get_hand_in_homework.html#aa693ca535644c39edb01110bfa9595ff',1,'gRPCClient::ResponseGetHandInHomework']]],
  ['handinhomeworkidfieldnumber_1',['HandInHomeworkIdFieldNumber',['../classg_r_p_c_client_1_1_request_get_hand_in_homework.html#ab53d3751fb622eacfc5c4cd5b7bd5b47',1,'gRPCClient::RequestGetHandInHomework']]],
  ['handinidfieldnumber_2',['handinidfieldnumber',['../classg_r_p_c_client_1_1_request_add_feedback.html#a63d208e6ac19c2419bc2c0f41200aeb6',1,'gRPCClient.RequestAddFeedback.HandInIdFieldNumber'],['../classg_r_p_c_client_1_1_request_get_feedback_by_hand_in_id_and_student_username.html#a30779b4671653ea7bb7849f1bfb90040',1,'gRPCClient.RequestGetFeedbackByHandInIdAndStudentUsername.HandInIdFieldNumber']]],
  ['handinsfieldnumber_3',['HandInsFieldNumber',['../classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html#a8d0795751aab5097b70078b6c63a86b9',1,'gRPCClient::ResponseGetHandInsByHomeworkId']]],
  ['homeworkfieldnumber_4',['homeworkfieldnumber',['../classg_r_p_c_client_1_1_request_add_homework.html#a755578ad1e6da202bcb4bc540607a31d',1,'gRPCClient.RequestAddHomework.HomeworkFieldNumber'],['../classg_r_p_c_client_1_1_response_add_homework.html#a8e472c664eb0a4273330c064738d29c9',1,'gRPCClient.ResponseAddHomework.HomeworkFieldNumber'],['../classg_r_p_c_client_1_1_lesson_data.html#abd6508b239ee33ee9fa899e4eca6bcfc',1,'gRPCClient.LessonData.HomeworkFieldNumber']]],
  ['homeworkidfieldnumber_5',['homeworkidfieldnumber',['../classg_r_p_c_client_1_1_request_create_hand_in_homework.html#ab0cfb6f4ba7faf6c220427f7cebf4b09',1,'gRPCClient.RequestCreateHandInHomework.HomeworkIdFieldNumber'],['../classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html#af9f7816ebdbc3eb3985eda1ceb182fe2',1,'gRPCClient.RequestGetHandInByHomeworkIdAndStudentUsername.HomeworkIdFieldNumber'],['../classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html#acebb4288320a0198fb1e3fabf758374d',1,'gRPCClient.RequestGetHandInsByHomeworkId.HomeworkIdFieldNumber']]]
];
